# poirebot

./: .gitignore  Cargo.toml  README.md
.github/ci/: ubuntu-install-packages
.github/workflows/: build.yml  release.yml
poirebot/: Cargo.toml
poirebot-api/: Cargo.toml
poirebot-cli/: Cargo.toml
poirebot-lichess/: Cargo.toml
poirebot-lichess/src/: bot.rs  main.rs
poirebot/src/: bitboard.rs  genius.rs  lib.rs  lichess.rs  main.rs
poirebot/src/game/: fen.rs  mod.rs  pieces.rs  position.rs
poirebot/src/game/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs  sliding.rs
poirebot/src/pieces/: mod.rs  pawn.rs
