[package]
name = "poirebot-lichess"
version = "0.1.7-next"
authors = ["Aram Peres <aram.peres@wavy.fm>"]
edition = "2018"
description = "A chess bot for Lichess written in Rust"
license = "MIT"
homepage = "https://github.com/aramperes/poirebot"
repository = "https://github.com/aramperes/poirebot"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1.1.0", features = ["full"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
futures-util = "0.3.13"
futures = "0.3.13"
tokio-stream = "0.1.5"
clap = "2.33"
regex = "1.4.5"
poirebot-licorice = "0.1.2-fork1"

[dependencies.poirebot]
path = "../poirebot"
version = "0.1.7-next"
