[package]
name = "poirebot"
version = "0.1.2"
authors = ["Aram Peres <aram.peres@wavy.fm>"]
edition = "2018"
description = "A chess bot engine written in Rust"
license = "MIT"
homepage = "https://github.com/aramperes/poirebot"
repository = "https://github.com/aramperes/poirebot"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1.1.0", features = ["full"] }
log = "0.4.14"
futures-util = "0.3.13"
futures = "0.3.13"
tokio-stream = "0.1.5"
rayon = "1.5.0"
rand = "0.8.3"
